--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 
      function numero(xx) {  		//recoge el número pulsado en el argumento.
          if (x=="0" || xi==1  ) {  // inicializar un número, 
+         		alert("agrega un alert aqui");
             		pantalla.innerHTML=xx; //mostrar en pantalla
             		x=xx; //guardar número;
             }
